--- a/styles.css
+++ b/styles.css
@@ -312,8 +312,16 @@ footer{
 
 /* addthis */
 .addthis_sharing_toolbox{
-	width: 20%;
-	float: right;
+	width: 100%;
 	margin-top: 24px;
-	text-align: right;
+	text-align: center;
 }
+
+@media (min-width: 980px) {
+	.addthis_sharing_toolbox{
+		width: 20%;
+		float: right;
+		text-align: right;
+	}
+}
+/* end of addthis */
