--- a/bat_styles.css
+++ b/bat_styles.css
@@ -1,7 +1,9 @@
+/* base font */
 body{
 	font-family: Cambria, Georgia, serif;
 }
 
+/* link goodness */
 a:link { color: #64c9ff; text-decoration: none; }
 
 a:visited { color: #00517e; text-decoration: none; }
@@ -22,7 +24,7 @@ a:active { color: #ca4700; text-decoration: underline; }
 	margin:0 auto;
 }
 
-/*story headline*/
+/* story headline */
 .bat_wrap h1{
 	font-family: "MillerHeadline Bold", Cambria, Georgia, serif;
 	font-weight:900;
@@ -31,7 +33,7 @@ a:active { color: #ca4700; text-decoration: underline; }
 	line-height: 1.2em
 }
 
-/*story deck*/
+/* story deck */
 .bat_wrap h2{
 	font-family: "MillerHeadline Light", Cambria, Georgia, serif;
 	color:#666;
@@ -48,6 +50,7 @@ a:active { color: #ca4700; text-decoration: underline; }
 	margin: 1em 0 1em 0;
 }
 
+/* hammerhead head on image */
 .bat_head{
 	display:block;
 	color:#fff;
@@ -57,6 +60,7 @@ a:active { color: #ca4700; text-decoration: underline; }
 	padding:0;
 }
 
+/* on-image subhead */
 .bat_head p{
 	font-size:2.5em;
 	margin:0;
@@ -103,7 +107,6 @@ a:active { color: #ca4700; text-decoration: underline; }
 
 /* caption styles */
 figcaption{
-	font-family: Cambria, Georgia, serif;
 	font-weight: 100;
 	font-size: .85em;
 	font-style: italic;
@@ -119,7 +122,6 @@ figcaption{
 
 /* story content */
 .bat_story{
-	font-family: Cambria, Georgia, serif;
 	font-size: 1em;
 	line-height: 1.75;
 }
@@ -154,6 +156,7 @@ figcaption{
 .bat_chart{
 	width:100%;
 }
+
 .bat_chart div {
 	font: 1em serif;
 	background-color: #000;
@@ -162,6 +165,7 @@ figcaption{
 	margin: 3px;
 	color: white;
 }
+
 .bat_chart div:hover{
 	background-color: #444;
 }
@@ -169,14 +173,6 @@ figcaption{
 /* html5 audio */
 audio{
 	width: 100%;
-}
-
-/* footer */
-footer{
-	text-align: center;
-	font-family: Georgia, serif;
-	font-style: italic;
-	padding-bottom: 5em;
 }
 
 /* media content in table */
@@ -192,31 +188,30 @@ footer{
 	opacity:.9;
 }
 
+/* screens greater that 48em for pure grids */
 @media (min-width: 48em) {
-	
 	.bat_date{
 		text-align: right;
 	}
 }
 
-/* screens greater that 980 px AKA: desktop */
-
+/* screens greater that 665 px, tablet, wiffle B */
 @media (min-width: 665px) {
-	
-	/* story head */
+
+	/* hammerhead head on image */
 	.bat_head {
 		bottom:2em;
 	}
-	
+
+	/* on-image subhead */
 	.bat_head p {
 		xfont-size:5em;
 	}
 }
 
-/* screens greater that 980 px AKA: desktop */
+/* screens greater that 1005 px, desktop, wiffle C */
+@media (min-width: 1005px) {
 
-@media (min-width: 980px) {
-	
 	/* set max width */
 	.bat_wrap{
 		max-width:980px;
@@ -226,25 +221,21 @@ footer{
 	.bat_wrap h1{
 		font-size: 5em;
 	}
-	
+
 	/*story deck*/
 	.bat_wrap h2{
 		font-size: 2.5em;
 	}
-	
-	/* story head */
+
+	/* hammerhead head on image */
 	.bat_head {
 		bottom:0;
 	}
-	
-	.bat_head p{
-		xfont-size:7.5em;
-	}
-	
+
 	.bat_full{
 		position: relative; /*for .bat_inset*/
 	}
-	
+
 	/* inset caption on full width with .inset class */
 	.bat_inset{
 		position: absolute;
@@ -253,12 +244,12 @@ footer{
 		margin: 0;
 		width: 100%;
 	}
-	
-	/*for .bat_inset*/
+
+	/* for .bat_inset */
 	.bat_full figcaption{
 		padding: 1em 3em;
 	}
-	
+
 	/* story style */
 	.bat_story{
 		width:75%;
@@ -271,7 +262,7 @@ footer{
 		width:60%;
 		margin-left:10%;
 	}
-	
+
 	/* increase pull quote size */
 	.bat_quote h4{
 		font-weight:100;
@@ -284,12 +275,12 @@ footer{
 		font-size:1em;
 		margin: 10px 0 0 5%;
 	}
-	
+
 	/* make it full width when it goes out to three columns */
 	.bat_media .pure-table{
 		margin: 0;
 	}
-	
+
 	/* make sub heads bigger */
 	.bat_wrap h3{
 		font-size: 2.25em;
@@ -299,7 +290,6 @@ footer{
 }
 
 /*FONTS*/
-
 @font-face {
 	font-family: "BentonSansCond Regular";
 	src: url("http://fonts.registerguard.com/benton/sanscondbold.eot");
@@ -342,8 +332,8 @@ footer{
 		url("http://fonts.registerguard.com/rg/rgweb.svg#RGWeb") format("svg");
 	font-weight:normal;font-style:normal;
 }
-/* start of .mm */
 
+/* start of .mm */
 .mm {
 	height: 0;
 	padding-bottom: 56.25%; /*16:9 = (9 / 16 = .5625) x 100*/
@@ -368,7 +358,6 @@ footer{
 .tv { padding-bottom: 75%; } /*4:3 = (3 / 4 = .75) x 100*/
 
 .funky { padding-bottom: 41.666666666667%; } /* 1080 × 450  (450 / 1080) = 41.66667 */
-
 /* end of .mm */
 
 /* addthis */
@@ -393,4 +382,6 @@ footer{
 	text-transform: uppercase;
 	letter-spacing: .05em;
 	color: #999;
+	text-align: center;
 }
+/* end of footer */
